# GSuiteDirSync-AEGEE

./: .gitignore  README.md  aegee_directory.py  directory_sync.py  myaegee_sync.py  new_members.py  pyproject.toml  sync_members_group.py
gsuitedirsync_aegee/: aegee_directory.py  myaegee_sync.py
