[tool.poetry]
name = "gsuitedirsync-aegee"
version = "0.1.0"
description = ""
authors = ["IT AEGEE-München <it@aegee-muenchen.de>"]

[tool.poetry.dependencies]
python = "^3.9"
google-api-core = "^2.2.2"
requests = "^2.26.0"
google-api-python-client = "^2.29.0"
google-auth-oauthlib = "^0.4.6"
dataclass-wizard = "^0.20.3"
google-api-python-client-stubs = "^1.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
