[tool.poetry]
name = "gsuitedirsync-aegee"
version = "0.1.0"
description = ""
authors = ["IT AEGEE-München <it@aegee-muenchen.de>"]

[tool.poetry.dependencies]
python = "~3.10"
google-api-core = "^2.11.0"
requests = "^2.26.0"
google-api-python-client = "^2.68.0"
google-auth-oauthlib = "^0.4.6"
dataclass-wizard = "^0.20.3"
google-api-python-client-stubs = "^1.13.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
